[package]
name = "honeypot_blacklist"
version = "0.1.0"
authors = ["Flavio Oliveira <rusty@wisespace.io>"]
description = "Provides a client for Project Honeypot http:BL API"
license = "MIT"
keywords = ["Honeypot", "Blacklist", "httpBL"]

repository = "https://github.com/wisespace-io/honeypot-blacklist"
readme = "README.md"

[dependencies]
resolve = "0.1.2"
