[package]
name = "honeypot_blacklist"
version = "0.1.0"
authors = ["Flavio Oliveira <rusty@wisespace.io>"]
description = "Provides a client for Project Honeypot http:BL API"
license = "MIT"
keywords = ["Honeypot", "Blacklist", "http:BL"]

repository = "https://github.com/wisespace-io/honeypot-blacklist"
readme = "README.md"

[dependencies]
domain = "0.2"
futures = "0.1.11"
tokio-core = "0.1.6"